// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerOptions renders correctly 1`] = `
<RCTScrollView
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
>
  <View>
    <View
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 24,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`DrawerOptions renders correctly when there are highlighted options 1`] = `
<RCTScrollView
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
>
  <View>
    <View
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 24,
        }
      }
    >
      <DrawerOption
        highlighted={true}
        onPress={[MockFunction]}
        subtext="testSubtext"
        title="testLabel"
      />
      <View
        style={
          [
            {
              "backgroundColor": "#EAE3DF",
              "flexShrink": 1,
              "height": 1,
              "width": "100%",
            },
            {
              "backgroundColor": "#FCCCB6",
            },
          ]
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`DrawerOptions renders correctly when there are options 1`] = `
<RCTScrollView
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
>
  <View>
    <View
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 24,
        }
      }
    >
      <DrawerOption
        onPress={[MockFunction]}
        title="testLabel"
      />
      <View
        style={
          [
            {
              "backgroundColor": "#EAE3DF",
              "flexShrink": 1,
              "height": 1,
              "width": "100%",
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`DrawerOptions renders correctly when there is content 1`] = `
<RCTScrollView
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
>
  <View>
    <View
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 24,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "color": "#2B1911",
            },
            undefined,
            false,
          ]
        }
      >
        testContent
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
